   -> Test-Harness -> PathTools), we now include a copy of Test::More in
   the distribution.  It is only used for testing, it won't be installed
   with the rest of the stuff.

 - Removed some 5.6-isms from Cwd in order to get it to build with
   older perls like 5.005.

 - abs_path() on Windows was trampling on $ENV{PWD} - fixed. [Spotted
   by Neil MacMullen]

3.01  Mon Sep  6 22:28:06 CDT 2004

 - Removed an unnecessary and confusing dependency on File::Spec from
   the Makefile.PL and the Build.PL.

 - Added a 'NAME' entry to the Makefile.PL, because otherwise it won't
   even begin to work. [Reported by many]

3.00  Thu Sep  2 22:15:07 CDT 2004

 - Merged Cwd and File::Spec into a single PathTools distribution.
   This was done because the two modules use each other fairly
   extensively, and extracting the common stuff into another
   distribution was deemed nigh-impossible.  The code in revision 3.00
   of PathTools should be equivalent to the code in Cwd 2.21 and
   File::Spec 0.90.

==================================================================
Prior to revision 3.00, Cwd and File::Spec were maintained as two
separate distributions.  The revision history for Cwd is shown here.
The revision history for File::Spec is further below.
==================================================================

Cwd 2.21  Tue Aug 31 22:50:14 CDT 2004

 - Removed "NO_META" from the Makefile.PL, since I'm not building the
   distribution with MakeMaker anyway.  [Rohan Carly]

 - Only test _perl_abs_path() on platforms where it's expected to work
   (platforms with '/' as the directory separator). [Craig A. Berry]

Cwd 2.20  Thu Jul 22 08:23:53 CDT 2004

 - On some implementations of perl on Win32, a memory leak (or worse?)
   occurred when calling getdcwd().  This has been fixed. [PodMaster]

 - Added tests for getdcwd() on Win32.

 - Fixed a problem in the pure-perl implementation _perl_abs_path()
   that caused a fatal error when run on plain files. [Nicholas Clark]