@@ -24,10 +24,6 @@ the semantics.
 
 This package is still work in progress ;-)
 
-=head1 AUTHORS
-
-o.flebbe@gmx.de
-
 =cut
 
 sub case_tolerant {
@@ -59,6 +55,17 @@ sub canonpath {
 }
 
 =pod
+
+=head1 AUTHOR
+
+o.flebbe@gmx.de
+
+=head1 COPYRIGHT
+
+Copyright (c) 2004 by the Perl 5 Porters.  All rights reserved.
+
+This program is free software; you can redistribute it and/or modify
+it under the same terms as Perl itself.
 
 =head1 SEE ALSO
 
