@@ -263,4 +263,11 @@ Volumes can be drive letters or UNC sharenames (\\server\share).
 
 =back
 
+=head1 COPYRIGHT
+
+Copyright (c) 2004 by the Perl 5 Porters.  All rights reserved.
+
+This program is free software; you can redistribute it and/or modify
+it under the same terms as Perl itself.
+
 =cut
